--- a/pom.xml
+++ b/pom.xml
@@ -29,30 +29,38 @@
         <version>3.3.2</version>
       </plugin>
 
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.10</version>
-        <executions>
-          <execution>
-            <id>prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>report</goal>
-              <goal>report-xml</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      <build>
+  <plugins>
+    <plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.10</version>
+      <executions>
+        <!-- prepare agent before tests -->
+        <execution>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
+        </execution>
+        <!-- generate XML report after tests -->
+        <execution>
+          <id>report</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>report</goal>
+          </goals>
+          <configuration>
+            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+            <xmlOutput>true</xmlOutput>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
 
-    </plugins>
-  </build>
+  
 
 </project>
 
