--- a/pom.xml
+++ b/pom.xml
@@ -23,44 +23,43 @@
     <finalName>java-hello-world</finalName>
     <plugins>
 
+      <!-- WAR Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
       </plugin>
 
-      <build>
-  <plugins>
-    <plugin>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.8.10</version>
-      <executions>
-        <!-- prepare agent before tests -->
-        <execution>
-          <goals>
-            <goal>prepare-agent</goal>
-          </goals>
-        </execution>
-        <!-- generate XML report after tests -->
-        <execution>
-          <id>report</id>
-          <phase>verify</phase>
-          <goals>
-            <goal>report</goal>
-          </goals>
-          <configuration>
-            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
-            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-            <xmlOutput>true</xmlOutput>
-          </configuration>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
-</build>
+      <!-- JaCoCo Plugin -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.10</version>
+        <executions>
+          <!-- prepare agent before tests -->
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <!-- generate XML report after tests -->
+          <execution>
+            <id>report</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+              <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+              <xmlOutput>true</xmlOutput>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-  
+    </plugins>
+  </build>
 
 </project>
 
