--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,14 @@
   <build>
     <finalName>java-hello-world</finalName>
     <plugins>
-
-      <!-- WAR Plugin -->
+      <!-- WAR plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
       </plugin>
 
-      <!-- JaCoCo Plugin -->
+      <!-- JaCoCo plugin -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -57,9 +56,7 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
 </project>
-
